--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   gauge_indicator: ^0.4.3
-
-
-
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+#  cupertino_icons: ^1.0.6
+  charts_painter: ^3.1.1
 
 dev_dependencies:
   flutter_test:
